New classes added